--- a/premiere-insurance/src/app/globals.css
+++ b/premiere-insurance/src/app/globals.css
@@ -64,6 +64,17 @@ a {
   z-index: 0;
 }
 
+.background-image-service-auto {
+  background-image: url('/images/auto.png');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 234px;
+  position: absolute;
+  opacity: 50%;
+  z-index: 0;
+}
+
 @media (max-width: 600px) {
   .background-image {
     height: 392px;
